cluster/apps/writefreely/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: writefreely
  labels:
    goldilocks.fairwinds.com/enabled: "true"
