cluster/apps/writefreely/deployment copy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: writefreely
  namespace: writefreely
spec:
  selector:
    matchLabels:
      app: writefreely
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: writefreely
    spec:
      containers:
        - name: database
          image: mariadb:10.8.2
          ports:
            - containerPort: 3306
              protocol: TCP
              name: mariadb
          securityContext:
            privileged: false
            runAsUser: 999
          resources:
            requests:
              cpu: 10m
              memory: 100Mi
          readinessProbe:
            exec:
              command:
              - bash
              - "-c"
              - |
                /usr/bin/mysql -u$MYSQL_DATABASE -p$MYSQL_PASSWORD -h 127.0.0.1 -e 'SELECT 1'
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            exec:
              command:
              - bash
              - "-c"
              - |
                /usr/bin/mysql -u$MYSQL_DATABASE -p$MYSQL_PASSWORD -h 127.0.0.1 -e 'SELECT 1'
            initialDelaySeconds: 300
            periodSeconds: 30
          volumeMounts:
            - mountPath: /var/lib/mysql
              name: writefreely-database
        - name: writefreely
          image: writeas/writefreely:latest
          ports:
            - containerPort: 8080
              protocol: TCP
              name: web
          resources:
            requests:
              cpu: 50m
              memory: 30Mi
          readinessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 30
          livenessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 300
            periodSeconds: 30
          volumeMounts:
            - name: writefreely-config
              mountPath: /go/config.ini
              subPath: config.ini
      restartPolicy: Always
      volumes:
        - name: writefreely-database
          persistentVolumeClaim:
            claimName: writefreely-database
        - name: writefreely-config
          secret:
            secretName: writefreely-config
            items:
            - key: config
              path: config.ini
