cluster/apps/writefreely/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: writefreely
  namespace: writefreely
spec:
  selector:
    app: writefreely
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
